feat(sse): 添加流式响应重试机制
- 在 SseHelper 中新增 isRetryableError 方法判断异常是否可重试
- 实现了针对 429 限速、5xx 服务端错误、网络异常的重试逻辑
- 修改 StreamingSseHandler 支持带重试的流式聊天功能
- 添加指数退避算法和随机抖动的重试延迟策略
- 在 BookChatService、ChatModelManager、DebateService、RoundTableService 中启用重试功能
- 设置默认最大重试次数为 2 次